tests/NormalTests/paczka2/big_fuzzy/65807119.err
Error in line 6: gyib A56 -3,7
Error in line 1: gyib A56 76,4
Error in line 7: gyib S442 443,6
Error in line 21: 6aQRomOIbBz A56 44,5
Error in line 20: wSuF9Na7uUK A56 96,5
Error in line 30: wSuF9Na7uUK A545 59,6
Error in line 34: A56 A56 30,3
Error in line 33: OvpXOJaerSI S442 60,2
Error in line 47: 6aQRomOIbBz S515 39,4
Error in line 54: A56 S442 30,77
Error in line 59: 3GYBtAEWG S515 6,1
Error in line 60: 3GYBtAEWG A545 58,5
Error in line 58: 6aQRomOIbBz S515 22,8
Error in line 57: A56 S442 127,1
Error in line 91: wSuF9Na7uUK A56 68,9
Error in line 102: OvpXOJaerSI A56 55,1
Error in line 106: 6aQRomOIbBz SNN2 10,1
Error in line 92: A56 A56 92,2
Error in line 120: wSuF9Na7uUK S515 60,8
Error in line 113: gyib S442 55,3
Error in line 128: 3GYBtAEWG S515 68,7
Error in line 136: 3GYBtAEWG S515 93,6
Error in line 122: wSuF9Na7uUK S442 40,4
Error in line 98: 6aQRomOIbBz S442 22,5
Error in line 147: 3GYBtAEWG S442 106,3
Error in line 150: A56 S442 64,2
Error in line 165: wSuF9Na7uUK S442 209,8
Error in line 154: A56 A56 96,6
Error in line 168: A56 S515 46,8
Error in line 158: gyib S515 23,9
Error in line 170: gyib A56 20,7
Error in line 164: OvpXOJaerSI A545 16,2
Error in line 178: A56 A56 25,6
Error in line 184: gyib A545 61,8
Error in line 187: gyib A56 97,0
Error in line 197: 6aQRomOIbBz S515 71,2
Error in line 200: OvpXOJaerSI A56 33,8
Error in line 208: OvpXOJaerSI A545 37,3
Error in line 206: 6aQRomOIbBz S442 33,7
Error in line 231: eZsEYlQ A5 88,2
Error in line 230: wSuF9Na7uUK S515 67,2
Error in line 242: wSuF9Na7uUK S515 17,4
Error in line 244: gyib A545 3,0
